fix alignment and layout in sales and customers form

--- a/src/components/form/Form.module.css
+++ b/src/components/form/Form.module.css
@@ -1,10 +1,20 @@
+.form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+}
+
 .fieldset {
   display: flex;
   flex-direction: column;
   border: 1px solid var(--white);
   border-radius: 10px;
-  padding: 50px;
-  margin: 20px 0;
+  padding: 20px;
+  margin: 20px auto;
+  width: 90%;
+  box-sizing: border-box;
+  flex-wrap: nowrap;
 }
 
 .legend {
@@ -12,20 +22,13 @@
   font-weight: bold;
   padding: 0 10px;
   text-align: center;
-}
-
-.usernameContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-bottom: 20px;
 }
 
 .label {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-  font-weight: bold;
 }
 
 .addCustomer {
@@ -33,8 +36,8 @@
   align-items: center;
   font-weight: lighter;
   color: var(--white);
-  margin-left: auto;
   font-size: 25px;
+  margin-left: auto;
 }
 
 .input,
@@ -54,7 +57,7 @@
 .button {
   padding: 10px 20px;
   background-color: var(--button_edit_color);
-  color: white;
+  color: var(--white);
   border: none;
   border-radius: 4px;
   font-size: 1em;
@@ -66,42 +69,29 @@
   background-color: var(--button_edit_hover_color);
 }
 
-.passwordContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 10px;
-}
-
-.inputContainer {
-  position: relative;
-  width: 100%;
-}
-
-.showPasswordButton {
-  display: inline-block;
-  position: absolute;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 5px;
-  right: 5px;
-  top: 36%;
-  transform: translateY(-50%);
-  color: var(--gray);
-}
 
 @media only screen and (min-width: 768px) {
   .fieldset {
-    width: 70%;
+    width: 80%;
   }
 
   .legend {
-    font-size: 30px;
+    font-size: 24px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
+  .fieldset {
+    width: 60%;
+    margin: 40px auto;
+  }
+
+  .form {
+    width: 80%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
   .fieldset {
     width: 50%;
   }
